@@ -12,6 +12,8 @@
 	(hd_home_init): Move code away from here to
 	update_dbus_interfaces_from_gconf and install GConf notification
 	handler.
+	(hd_home_desktop_key_press): Initialise D-Bus proxies here so that we
+	don't block for an answer from the Gconf daemon at startup.
 
 2010-01-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
